<resources>
    <string name="app_name">TheCheezeys</string>
    <string name="welcomeText">Welcome to Cheezery!</string>
    <string name="welcomeDescri">Home of the most wonderful desert ever seen (and tasted) by the human being</string>
    <string name="buttonStart">get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name!</string>
    <string name="e_mail">E_mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
</resources>