<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleGray"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:src="@drawable/thecheezery"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dustyWhite"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="25dp"
        android:textStyle="italic"
        android:textColor="@color/dustyWhite"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcomeDescri"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/bt_getStarted"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/buttonStart"
        android:textColor="@color/white" />


</LinearLayout>